--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   
   <!-- jsPsych 라이브러리 -->
   <link href="https://unpkg.com/jspsych@7.3.1/css/jspsych.css" rel="stylesheet" />
+  <!-- Three.js 라이브러리 -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
   <!-- 커스텀 스타일 -->
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,6 +22,8 @@
   
   <!-- 실험 설정 -->
   <script src="js/config.js"></script>
+  <!-- 3D 장면 렌더링 -->
+  <script src="js/scene3d.js"></script>
   <!-- 시나리오 정의 -->
   <script src="js/scenarios.js"></script>
   <!-- 메인 실험 로직 -->
